# Groot

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.rst  CMakeLists.txt  Groot.desktop  README.md  appimage_howto.md  package.xml  qt_installer_howto.md
QtNodeEditor/: CMakeLists.txt
QtNodeEditor/include/nodes/internal/: Connection.hpp  ConnectionGeometry.hpp  ConnectionGraphicsObject.hpp  ConnectionStyle.hpp  DataModelRegistry.hpp  FlowScene.hpp  FlowView.hpp  Node.hpp  NodeDataModel.hpp  NodeGeometry.hpp  NodeGraphicsObject.hpp  NodeState.hpp  PortType.hpp  QStringStdHash.hpp  memory.hpp
QtNodeEditor/resources/: DefaultStyle.json
QtNodeEditor/src/: Connection.cpp  ConnectionGeometry.cpp  ConnectionGraphicsObject.cpp  ConnectionPainter.cpp  ConnectionStyle.cpp  DataModelRegistry.cpp  FlowScene.cpp  FlowView.cpp  Node.cpp  NodeConnectionInteraction.cpp  NodeDataModel.cpp  NodeGeometry.cpp  NodeGraphicsObject.cpp  NodePainter.cpp  NodePainter.hpp  NodeState.cpp
bt_editor/: BT_logger_generated.h  NodeFactory.cpp  NodeFactory.hpp  XML_utilities.cpp  XML_utilities.hpp  XML_utilities.hpp.orig  XmlParsers.cpp  XmlParsers.hpp  about_dialog.ui  action_form.ui  bt_editor_base.cpp  bt_editor_base.h  bt_editor_base.h.orig  custom_node_dialog.cpp  custom_node_dialog.h  custom_node_dialog.ui  editor_flowscene.cpp  editor_flowscene.h  graphic_container.cpp  graphic_container.h  main.cpp  mainwindow.cpp  mainwindow.cpp.orig  mainwindow.h  mainwindow.ui  model_repository_dialog.ui  node_palette.cpp  node_palette.h  node_palette.ui  package.xml.disabled  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  sidepanel_editor.cpp  sidepanel_editor.h  sidepanel_editor.ui  sidepanel_monitor.cpp  sidepanel_monitor.h  sidepanel_monitor.ui  sidepanel_replay.cpp  (+7 more)
bt_editor/graveyard/: model_repository_dialog.cpp  model_repository_dialog.h
bt_editor/models/: ActionNodeModel.cpp  ActionNodeModel.hpp  BehaviorTreeNodeModel.cpp  BehaviorTreeNodeModel.hpp  ControlNodeModel.cpp  ControlNodeModel.hpp  DecoratorNodeModel.cpp  DecoratorNodeModel.hpp  RootNodeModel.cpp  RootNodeModel.hpp  SubtreeNodeModel.cpp  SubtreeNodeModel.hpp
bt_editor/resources/: NodesStyle.json  cross_door.xml  icons.qrc  palette.txt  style.qrc  stylesheet.qss
cmake/: FindZMQ.cmake
installer/: config.xml
installer/org.eurecat.Groot/meta/: installscript.qs  license.txt  package.xml
snap/: snapcraft.yaml
test/: CMakeLists.txt  editor_test.cpp  groot_test.cpp  groot_test_base.cpp  groot_test_base.h  replay_test.cpp  tst_loadsave.cpp
test_data/: Simple.xml  SystemSkillTest.skills.json  bt_subtree_trace.fbl  bt_trace.fbl  crossdoor_palette.xml  crossdoor_trace.fbl  crossdoor_with_subtree.xml  crossdor_with_subtree.xml  custom_ports.xml  issue_24.xml  issue_3.xml  pippo.xml  show_all.xml  simple_trace.fbl  simple_without_model.xml  subtree_test_fail.xml  subtree_with_remapping.xml  test_files.qrc  test_subtrees_issue_8.xml  test_xml_key_reordering_issue.xml
test_data/include_path_test/: main.xml  variant1.xml  variant2.xml
