<?xml version="1.0"?>
<package>
  <name>groot</name>
  <version>1.0.0</version>
  <description>Graphical editor to create behaviour trees</description>

  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libqt5-svg-dev</build_depend>
  <build_depend>libqt5-opengl-dev</build_depend>
  <build_depend>qttools5-dev-tools</build_depend>
  <build_depend>libdw-dev</build_depend>
  <build_depend>libzmq3-dev</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>behaviortree_cpp_v3</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
